Fix height of aligned elements in the content grid layout

--- a/packages/block-library/src/blocks/sidecar/editor-styles.scss
+++ b/packages/block-library/src/blocks/sidecar/editor-styles.scss
@@ -42,6 +42,7 @@
       > :is(.alignleft, [data-align="left"]),
       > :is(.alignright, [data-align="right"]) {
         grid-row-end: span 5;
+        align-self: flex-start;
       }
 
       > :is(.alignleft, [data-align="left"]) {
